feat: bump to Cassandra 4 and JDK 11 (#4)
Signed-off-by: Yoan Blanc <yblanc@edgelab.ch>
Co-authored-by: Jonathan Ballet <jon@multani.info>